# satoshi-terminal

./: Cargo.toml  LICENSE  README.md  install.sh
src/: anim.rs  app.rs  main.rs
src/audio/: mod.rs  music_player.rs
src/ui/: chapter.rs  menu.rs  mod.rs  transition.rs
src/volumes/: mod.rs  story.rs
