[package]
name = "satoshi-terminal"
version = "0.1.1"
edition = "2024"
description = "A terminal game that teaches Bitcoin through interactive levels — Satoshi's Terminal"
license = "MIT"
keywords = ["game", "bitcoin", "tui", "terminal", "education"]
categories = ["games", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "satoshi"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
animate = { git = "https://github.com/vyfor/animate", features = ["ratatui"] }
tui-overlay = "0.1.2"

[features]
default = ["audio"]
audio = []

[profile.release]
opt-level = 3
strip = true
